--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "eaglercraft-1122",
+  "name": "Eaglercraft_1.12_Offline_en_US.html",
   "builds": [],
   "routes": [
     { "src": "/(.*)", "dest": "/index.html" }
